fix sidebar height overflow

--- a/src/scss/partials/_menu.scss
+++ b/src/scss/partials/_menu.scss
@@ -230,9 +230,9 @@
             }
             > .pro-inner-list-item {
               height: auto !important;
-              position: absolute;
-              left: 100%;
-              top: 0;
+              position: fixed;
+              left: $sidebar-collapsed-width;
+              transform: translateY(-50px);
               display: none !important;
               width: 270px;
             }
@@ -316,7 +316,7 @@
             &.pro-sub-menu {
               > .pro-inner-list-item {
                 left: auto;
-                right: 100%;
+                right: $sidebar-collapsed-width;
               }
 
               .pro-inner-list-item {
