--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,7 @@
 $sidebar-bg-color: #1d1d1d !default;
 $sidebar-color: #adadad !default;
+$sidebar-width: 270px !default;
+$sidebar-collapsed-width: 80px !default;
 $highlight-color: #d8d8d8 !default;
 $submenu-bg-color: #2b2b2b !default;
 $submenu-bg-color-collapsed: #2b2b2b !default;
